Bug 43594 - [test case] RULE elements are ignored in TABLE
Summary: [test case] RULE elements are ignored in TABLE
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml renderer (other bugs)
Version First Reported In: 3.0.1
Platform: Mandrake RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 47412 64457 109855 (view as bug list)
Depends on:
Blocks:
 
Reported: 2002-06-06 13:33 UTC by tb100
Modified: 2007-11-11 08:29 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch (4.55 KB, patch)
2005-03-17 23:20 UTC, Allan Sandfeld
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tb100 2002-06-06 13:26:35 UTC
(*** This bug was imported into bugs.kde.org ***)

Package:           khtml
Version:           3.0.1 (using KDE 3.0.1 )
Severity:          normal
Installed from:    Mandrake RPMs
Compiler:          gcc 3.1
OS:                Linux
OS/Compiler notes: Not Specified

RULE and FRAME (html 4.01) attributes in the table element are not processed correctly. 

<table frame="hsides" rules="none">
<tr><td>1</td><td>2</td></tr></table>

should produce this:

---------
  1   1
---------

but actually produces this
---------
| 1 | 2 |
---------

Could this please be fixed

(Submitted via bugs.kde.org)
Comment 1 Dirk Mueller 2002-10-27 20:54:34 UTC
*** Bug 47412 has been marked as a duplicate of this bug. ***
Comment 2 Dean Darlison 2003-07-24 18:11:45 UTC
Bug is not a konqueror bug, but a qt3/kde3.1.x/Xft bug. 
 
A workaround to the problem was to add the following to my ~/.xtconfig file: - 
 
match any family == "Misc Console"      edit family += "Courier New 
[Monotype]"; 
match any family == "Misc Fixed"        edit family += "Fixed [Misc]"; 
 
I.e. all affected fonts are replaced with fonts that work ! 
Comment 3 Stephan Kulow 2004-01-17 17:34:49 UTC
rules="none" seems to work with 3.2
Comment 4 Shift 2004-02-08 00:35:08 UTC
Yes please add this support to Konqueror !!!!!
It will be great.

Thanks,

Franck
Comment 5 Diederik van der Boor 2004-09-09 20:22:44 UTC
I also have <table border="1" cellspacing="0" cellpadding="2" rules="rows" frame="void"> tag, which doesn't work in KDE 3.3.0, QT 3.3.3.!
Comment 6 Allan Sandfeld 2005-03-10 13:59:15 UTC
Any real world sites that use these attributes?

And what is the status of other browsers support?
Comment 7 Shift 2005-03-11 20:00:43 UTC
Links support them.
Opera too.

But why should other browsers support this ? It is in the HTML specifications and it must be implemented or you have to remove "HTML 4.01 compliance" from the about page :)

Rules and frame are semantically very important. Please, implement them !!!!!

Thanks :)
Comment 8 Allan Sandfeld 2005-03-17 23:20:27 UTC
Created attachment 10171 [details]
Patch

This patch implements FRAME, but only Void and All for RULES.

Seems that html_tableimpl.cpp could use a lot of cleaning though.
Comment 9 Maksim Orlovich 2005-06-16 03:38:37 UTC
*** Bug 64457 has been marked as a duplicate of this bug. ***
Comment 10 Maksim Orlovich 2005-07-29 20:35:47 UTC
*** Bug 109855 has been marked as a duplicate of this bug. ***
Comment 11 Allan Sandfeld 2005-10-13 13:40:41 UTC
Actually I've committed the FRAME implementation for KDE 3.5. Now only the most complicated RULE attributes needs to be solved.

Besides it is a parsing issue. The RULE should be converted to some form of CSS. The problem is that cells draw the borders. To support it we need to make it possible for table-sections and table-rows to draw borders instead.
Comment 12 Tommi Tervo 2006-07-04 12:07:44 UTC
Seems to be fixed. Svn r557k
Comment 13 Allan Sandfeld 2006-07-04 13:27:26 UTC
I might seem that way, but many HTML 4.01 values for RULE are still not supported.
Comment 14 Stevan White 2006-07-08 21:32:28 UTC
Tommi,

I'm looking at my example from the original bug report using Konqueror 3.5.2.
It is not fixed in that version--the problem is exactly as I described.

Are you aware of a very recent change to the sources that would have fixed this?

Please look again at the example using Konqueror 3.5.2 or earlier.  Unless you can verify that you see the bug in an older version, but not in the latest bleeding-edge SVN, I will re-open this bug report.
Comment 15 Maksim Orlovich 2006-07-08 21:40:24 UTC
re:comment #14: it got reopened already, by the developer who did FRAME, but didn't yet do RULE. 
Comment 16 Germain Garand 2007-11-11 08:29:04 UTC
SVN commit 735222 by ggarand:

finish support of HTML 4.01's RULES attribute in TABLE

- add CSS style rules for rows/cols/groups/all
- replace previous logic with pure css.

BUG: 43594


 M  +111 -0    css/html4.css  
 M  +0 -25     html/html_tableimpl.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=735222