finish support of HTML 4.01's RULES attribute in TABLE

- add CSS style rules for rows/cols/groups/all
- replace previous logic with pure css.

BUG: 43594

svn path=/trunk/KDE/kdelibs/; revision=735222